<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    android:id="@+id/bbn_nav_menu"
    app:bbn_badgeColor="#FFFF0000"
    app:bbn_rippleColor="#33ffffff">

    <item
        android:id="@+id/bbn_item1"
        android:color="@color/colorPrimary"
        android:icon="@drawable/bellnotificacion"
        android:title="@string/menu_notifications" />
    <item
        android:id="@+id/bbn_item2"
        android:color="@android:color/holo_green_dark"
        android:icon="@drawable/certification"
        android:title="@string/menu_ratings" />
    <item
        android:id="@+id/bbn_item3"
        android:color="@android:color/holo_orange_dark"
        android:icon="@drawable/dashboard64"
        android:title="@string/menu_dashboard" />
    <item
        android:id="@+id/bbn_item4"
        android:color="#FF5252"
        android:icon="@drawable/ic_mail_white_24dp"
        android:title="@string/menu_communications" />
    <item
        android:id="@+id/bbn_item5"
        android:color="#FF9800"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/menu_profile" />
</menu>